feat: create gamemode bp

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,14 +6,16 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
 LocalMapOptions=
-TransitionMap=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
-ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Delta/Game/GM_Gameplay.GM_Gameplay_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
@@ -76,13 +78,6 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
-[/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_FirstPerson",NewGameName="/Script/ProjectDelta")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPerson",NewGameName="/Script/ProjectDelta")
-+ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="ProjectDeltaProjectile")
-+ActiveClassRedirects=(OldClassName="TP_FirstPersonPlayerController",NewClassName="ProjectDeltaPlayerController")
-+ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="ProjectDeltaGameMode")
-+ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="ProjectDeltaCharacter")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -97,4 +92,8 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/ProjectDelta.LevelLoaderComponent.Loads",NewName="/Script/ProjectDelta.LevelLoaderComponent.LoadLevels")
 
