feat: enable nanite

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,6 +19,8 @@ GlobalDefaultGameMode=/Game/Delta/Game/GM_Gameplay.GM_Gameplay_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
+r.Nanite.Tessellation = 1
+r.Nanite.AllowTessellation = 1
 r.ReflectionMethod=1
 r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
