feat: add default hole

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,3 +6,113 @@ ProjectName=First Person Template
 ProjectID=9BCC41BA4A9607A172AC88AB39E99260
 CopyrightNotice=Copyright Lede Studios. All Rights Reserved.
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+Build=IfProjectHasCode
+BuildConfiguration=PPBC_Shipping
+BuildTarget=
+FullRebuild=True
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bExcludeMonolithicEngineHeadersInNativizedCode=False
+UsePakFile=True
+bUseIoStore=True
+bUseZenStore=False
+bMakeBinaryConfig=False
+bGenerateChunks=False
+bGenerateNoChunks=False
+bChunkHardReferencesOnly=False
+bForceOneChunkPerFile=False
+MaxChunkSize=0
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+WriteBackMetadataToAssetRegistry=Disabled
+bWritePluginSizeSummaryJsons=False
+bCompressed=True
+PackageCompressionFormat=Oodle
+bForceUseProjectCompressionFormatIgnoreHardwareOverride=False
+PackageAdditionalCompressionOptions=
+PackageCompressionMethod=Kraken
+PackageCompressionLevel_DebugDevelopment=4
+PackageCompressionLevel_TestShipping=4
+PackageCompressionLevel_Distribution=7
+PackageCompressionMinBytesSaved=1024
+PackageCompressionMinPercentSaved=5
+bPackageCompressionEnableDDC=False
+PackageCompressionMinSizeToConsiderDDC=0
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
+bShareMaterialShaderCode=True
+bDeterministicShaderCodeOrder=False
+bSharedMaterialNativeLibraries=True
+ApplocalPrerequisitesDirectory=(Path="")
+IncludeCrashReporter=True
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+LocalizationTargetCatchAllChunkId=0
+bCookAll=True
+bCookMapsOnly=False
+bTreatWarningsAsErrorsOnCook=False
+bSkipEditorContent=False
+bSkipMovies=False
+-IniKeyDenylist=KeyStorePassword
+-IniKeyDenylist=KeyPassword
+-IniKeyDenylist=DebugKeyStorePassword
+-IniKeyDenylist=DebugKeyPassword
+-IniKeyDenylist=rsa.privateexp
+-IniKeyDenylist=rsa.modulus
+-IniKeyDenylist=rsa.publicexp
+-IniKeyDenylist=aes.key
+-IniKeyDenylist=SigningPublicExponent
+-IniKeyDenylist=SigningModulus
+-IniKeyDenylist=SigningPrivateExponent
+-IniKeyDenylist=EncryptionKey
+-IniKeyDenylist=DevCenterUsername
+-IniKeyDenylist=DevCenterPassword
+-IniKeyDenylist=IOSTeamID
+-IniKeyDenylist=SigningCertificate
+-IniKeyDenylist=MobileProvision
+-IniKeyDenylist=IniKeyDenylist
+-IniKeyDenylist=IniSectionDenylist
++IniKeyDenylist=KeyStorePassword
++IniKeyDenylist=KeyPassword
++IniKeyDenylist=DebugKeyStorePassword
++IniKeyDenylist=DebugKeyPassword
++IniKeyDenylist=rsa.privateexp
++IniKeyDenylist=rsa.modulus
++IniKeyDenylist=rsa.publicexp
++IniKeyDenylist=aes.key
++IniKeyDenylist=SigningPublicExponent
++IniKeyDenylist=SigningModulus
++IniKeyDenylist=SigningPrivateExponent
++IniKeyDenylist=EncryptionKey
++IniKeyDenylist=DevCenterUsername
++IniKeyDenylist=DevCenterPassword
++IniKeyDenylist=IOSTeamID
++IniKeyDenylist=SigningCertificate
++IniKeyDenylist=MobileProvision
++IniKeyDenylist=IniKeyDenylist
++IniKeyDenylist=IniSectionDenylist
+-IniSectionDenylist=HordeStorageServers
+-IniSectionDenylist=StorageServers
+-IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
++IniSectionDenylist=HordeStorageServers
++IniSectionDenylist=StorageServers
++IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
++MapsToCook=(FilePath="/Game/Delta/Maps/Map_Game")
++MapsToCook=(FilePath="/Game/Delta/Maps/Stairway/Map_Stairway_Default")
++MapsToCook=(FilePath="/Game/Delta/Maps/Room/Map_Room_Default")
++MapsToCook=(FilePath="/Game/Delta/Maps/Room/Map_Room_Default_Light")
++MapsToCook=(FilePath="/Game/Delta/Maps/LivingRoom/Map_LivingRoom_Default")
++MapsToCook=(FilePath="/Game/Delta/Maps/Hole/Map_Hole_Default")
++MapsToCook=(FilePath="/Game/Delta/Maps/Hallway/Map_Hallway_Default")
++MapsToCook=(FilePath="/Game/Delta/Maps/Debug/Map_Debug")
++DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
++DirectoriesToAlwaysStageAsUFS=(Path="/Engine/Shaders")
++DirectoriesToAlwaysStageAsUFS=(Path="/ProjectDelta/Shaders")
+bRetainStagedDirectory=False
+CustomStageCopyHandler=
+
