--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,19 @@
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="Projectile",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
+; [SystemSettings]
+; r.RayTracing=1
+; r.RayTracing.Shadows=1
+; r.RayTracing.Reflections=1
+
+[Core.Log]
+LogRHI=Verbose
+LogRayTracing=Verbose
+
+[ShaderPipelineCache.CacheFile]
+bSaveShaderPipelineCache=1
+bLoadShaderPipelineCache=1
+
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Delta/Maps/Map_Game.Map_Game
 LocalMapOptions=
@@ -28,7 +41,6 @@ r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 
-
 r.SkinCache.CompileShaders=True
 
 r.RayTracing=True
@@ -39,6 +51,8 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.MegaLights.EnableForProject=True
+r.RayTracing.Shadows=True
+r.RayTracing.AmbientOcclusion=1
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
