feat: update doors

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,7 +17,7 @@ bSaveShaderPipelineCache=1
 bLoadShaderPipelineCache=1
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Delta/Maps/Map_Game.Map_Game
+EditorStartupMap=/Game/Delta/Maps/Map_Menu.Map_Menu
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -26,7 +26,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Delta/Maps/Map_Game.Map_Game
+GameDefaultMap=/Game/Delta/Maps/Map_Menu.Map_Menu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Delta/Game/GM_Gameplay.GM_Gameplay_C
 GlobalDefaultServerGameMode=None
