--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -53,6 +53,7 @@ r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.MegaLights.EnableForProject=True
 r.RayTracing.Shadows=True
 r.RayTracing.AmbientOcclusion=1
+r.Lumen.HardwareRayTracing=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
