--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -48,12 +48,12 @@ bShareMaterialShaderCode=True
 bDeterministicShaderCodeOrder=False
 bSharedMaterialNativeLibraries=True
 ApplocalPrerequisitesDirectory=(Path="")
-IncludeCrashReporter=True
+IncludeCrashReporter=False
 InternationalizationPreset=English
 -CulturesToStage=en
 +CulturesToStage=en
 LocalizationTargetCatchAllChunkId=0
-bCookAll=True
+bCookAll=False
 bCookMapsOnly=False
 bTreatWarningsAsErrorsOnCook=False
 bSkipEditorContent=False
@@ -107,8 +107,6 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Delta/Maps/Map_Default_02")
 +MapsToCook=(FilePath="/Game/Delta/Maps/Map_Default_03")
 +DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
-+DirectoriesToAlwaysStageAsUFS=(Path="/Engine/Shaders")
-+DirectoriesToAlwaysStageAsUFS=(Path="/ProjectDelta/Shaders")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
